# NORA

./: .env.example  .flake8  .gitignore  README.md  backup_db_script.sh  import_script.sh  manage.py  pyproject.toml
apps/admin/: custom_admin.py  views.py
apps/administrative/: admin.py  models.py  schema.py
apps/allergenicity/: admin.py  apps.py  models.py
apps/api/: urls.py  views.py
apps/authentication/: account.py
apps/composition/: admin.py  apps.py  models.py  schema.py
apps/core/: admin.py  forms.py  models.py  urls.py  views.py
apps/extractor/: admin.py  models.py
apps/novel_food/: admin.py  apps.py  filters.py  models.py  schema.py  urls.py  views.py
apps/studies/: admin.py  apps.py  models.py  schema.py
apps/study/: models.py
apps/taxonomies/: admin.py  apps.py  models.py  schema.py  util.py
apps/util/: admin_utils.py  model_utils.py  sync_mixin.py
client/frontend/: .env  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  vite.config.js
config/: asgi.py  celery.py  schema.py  urls.py  wsgi.py
config/settings/: asgi.py  base.py  devel.py  production.py  settings.py  test_production.py  urls.py  wsgi.py
data/: adme.csv  chemical_identities.csv  composition.csv  endpoint_studies.csv  excel_dump_07_05_2024.csv  genotox_studies.csv  opinions.csv  organism_identities.csv  processes.csv  use.csv
data/CATALOGUE/: ANLYMD_FULL_12_0.xml  BASIC_EFFECT_FULL_2_0.xml  EXPRRES_FULL_3_1.xml  GUIDELINE_FULL_3_0.xml  LANG_FULL_3_0.xml  LEGREF_FULL_10_0.xml  LEGREF_FULL_10_12.xml  (+12 more)
extractor/: admin.py  models.py
utils/: admin_utils.py
(+180 files in other folders)
